[package]
name = "try-parse-anyway-proc-macro"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.51", features = ["full"] }
quote = "1.0.7"

serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

try-parse-anyway-type = { path = "../try-parse-anyway-type" }

[lib]
proc-macro = true
